Fixed footer x overflow and privacy label overlapping options input

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,14 +2,15 @@
 .main-footer {
   background-color: var(--footer-background);
   color: var(--text-color);
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: center;
   user-select: none;
-  width: 100%;
+  width: 100vw;
 }
 
 .footer-content {
-  max-width: 1200px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 0 1rem;
   display: flex;
